// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableContainer ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-paperRoot-1 MuiTableContainer-root MuiPaper-elevation0 MuiPaper-rounded"
  />
</div>
`;

exports[`TableContainer ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-paperRoot-2 MuiTableContainer-root MuiPaper-elevation0 MuiPaper-rounded"
  />
</div>
`;
